[project]
name = "yelp-food-review-sentiment-analysis"
version = "0.1.0"
description = "Sentiment analysis of Yelp food reviews using CNN and LSTM."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "ipykernel>=6.30.1",
  "matplotlib>=3.8,<3.10",
  "nltk>=3.9.2",
  "notebook",
  "numpy>=1.26.0,<2.0",
  "pandas>=2.2.2",
  "scikit-learn>=1.4,<1.6",
  "tensorflow[and-cuda]>=2.15.0",
]
